# matrix

./: CMakeLists.txt  array2d.hpp  main.cpp  matrix_initialised.hpp
